bk_ida/gccida/g1/emit_case_nodes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6507:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6508:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6511:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6512:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v53; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6531:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_labela; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6532:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_label; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6546:24: error: use of undeclared identifier 'machine_mode'
v16 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v15, v6); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6546:43: error: use of undeclared identifier 'machine_mode'
v16 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v15, v6); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6546:58: error: expected expression
v16 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v15, v6); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6557:24: error: use of undeclared identifier 'machine_mode'
v19 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v18, v6); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6557:43: error: use of undeclared identifier 'machine_mode'
v19 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v18, v6); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6557:58: error: expected expression
v19 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v18, v6); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6558:49: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( index, v19, GT, 0LL, ( machine_mode)v7, v6, highd); 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6566:24: error: use of undeclared identifier 'machine_mode'
v21 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v20, v6); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6566:43: error: use of undeclared identifier 'machine_mode'
v21 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v20, v6); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6566:58: error: expected expression
v21 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v20, v6); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6567:49: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( index, v21, LT, 0LL, ( machine_mode)v7, v6, highe); 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6574:24: error: use of undeclared identifier 'machine_mode'
v23 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v22, v6); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/stmt.c:6574:43: error: use of undeclared identifier 'machine_mode'
v23 = convert_modes( ( machine_mode)v7, ( machine_mode)( unsigned __int8)v8, v22, v6); 
                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_case_nodes/src/obj/stmt.o] Error 1
